<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WanAndroid</string>

    <string name="text_user_name">User Name</string>
    <string name="text_user_password">Password</string>
    <string name="text_user_name_helper">Please input user name</string>
    <string name="text_register_tips">Not account yet? Create one</string>
    <string name="text_forget_password">Forget password?</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_developing">Developing…</string>
    <string name="text_loading">Loading…</string>
    <string name="text_no_data">No more data.</string>
    <string name="text_theme_switcher">Theme Switcher</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_sure">OK</string>
    <string name="text_save">Save</string>
    <string name="text_unknown_error">Unknown error</string>
    <string name="text_network_not_available">Network not available</string>
    <string name="text_address_not_reachable">Address not reachable</string>
    <string name="text_network_timeout">Network connect timeout</string>

    <string name="text_desc_default">Default</string>
    <string name="text_desc_black">Black</string>
    <string name="text_desc_red">Red</string>
    <string name="text_desc_purple">Purple</string>
    <string name="text_desc_indigo">Indigo</string>
    <string name="text_desc_green">Green</string>
    <string name="text_desc_orange">Orange</string>
    <string name="text_desc_bluegrey">BlueGrey</string>
    <string name="text_desc_yellow">Yellow</string>
    <string name="text_desc_brown">Brown</string>
    <string name="text_desc_pink">Pink</string>
    <string name="text_desc_blue">Blue</string>

    <string name="text_home">Home</string>
    <string name="text_knowledge">Knowledge System</string>
    <string name="text_knowledge_short">Knowledge</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_project">Project</string>

    <string name="text_token_expired">This action needs login, please login first</string>
    <string name="text_user_name_empty">User name cannot empty</string>
    <string name="text_password_empty">Password cannot empty</string>
    <string name="text_password_too_short">Password length must greater than 6</string>
    <string name="text_confirm_password_must_same">Two passwords must same</string>

    <string name="text_theme">Theme</string>
    <string name="text_empty_tips">Oops, There is nothing!</string>
    <string name="text_error_tips">Oops, There are something wrong!</string>
    <string name="text_retry">Retry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_process">processing…</string>
    <string name="text_register_success">Register success</string>
    <string name="text_on_login">Login…</string>
    <string name="text_double_click_quit">Click again quit app</string>
    <string name="text_second" tools:ignore="MissingTranslation">%d s</string>
    <string name="text_login_out">Login Out</string>
    <string name="text_login_out_title">Login out tips</string>
    <string name="text_login_out_tips">Are you sure login out the application?</string>
    <string name="text_login_tips_title">Login tips</string>
    <string name="text_login_tips_message">This function need to login, Are you want to login?</string>
    <string name="text_collect_success">Collection success</string>
    <string name="text_cancel_collect_success">Cancel collection success</string>
    <string name="text_play" tools:ignore="MissingTranslation">Play</string>
    <string name="text_android" tools:ignore="MissingTranslation">Android</string>
    <string name="text_knowledge_data_cannot_null">Invalid knowledge cid</string>
    <string name="text_interview_relative" translatable="false">面试相关</string>
    <string name="text_click_login">Click head to login</string>
    <string name="text_public_account">Public Account</string>
    <string name="text_collection">Collection</string>
    <string name="text_share_link">Share link to</string>
    <string name="text_open_browser">Open browser</string>
    <string name="text_hot_search">Hot search</string>
    <string name="text_search_history">Search history</string>
    <string name="text_clear_history">Clear history</string>
    <string name="text_search">Search</string>
    <string name="text_result">RESULT</string>
    <string name="text_settings">Settings</string>
    <string name="text_language_setting">Language Setting</string>
    <string name="text_language_setting_tips">Choose the display language</string>
    <string name="text_english" tools:ignore="MissingTranslation">English</string>
    <string name="text_chinese" tools:ignore="MissingTranslation">简体中文</string>
    <string name="text_tradition_chinese" tools:ignore="MissingTranslation">繁體中文</string>
    <string name="text_choose_language">Choose Language</string>
    <string name="text_theme_setting">Theme Setting</string>
    <string name="text_theme_setting_tips">Choose your favorite theme</string>
    <string name="text_welfare">Welfare</string>
    <string name="text_scan">Scanning</string>
    <string name="text_invalid_image_url">Invalid image url</string>
    <string name="text_empty_image_list">Image list is empty</string>
    <string name="text_image_index" tools:ignore="MissingTranslation">%1$d / %2$d</string>
    <string name="text_transition_image" tools:ignore="MissingTranslation">text transition image</string>
    <string name="text_camera_permission">Please allow camera permission first</string>
    <string name="text_open">Open</string>
    <string name="text_camera_permission_message">You have denied camera permission, please open the permission first, then use this function.</string>
    <string name="text_permission_tips">Permission tips</string>
    <string name="text_package_scheme" tools:ignore="MissingTranslation">package</string>
    <string name="text_qrcode_format">Format:</string>
    <string name="text_qrcode_type">\u0020\u0020\u0020\u0020Type:</string>
    <string name="text_qrcode_time">\u0020\u0020\u0020\u0020Time:</string>
    <string name="text_scan_result">Scanning result</string>
    <string name="text_copy">Copy</string>
    <string name="text_website">Website</string>
    <string name="text_copy_success">Copy success</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="light">Light</string>
    <string name="text_scanning_tips">Align the QR code within the frame to scan</string>
    <string name="text_version_info">Version: v%s</string>
</resources>
