<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/text_home" />

    </group>

    <item android:title="">
        <item
            android:id="@+id/nav_public_account"
            android:icon="@drawable/ic_menu_wechat"
            android:title="@string/text_public_account" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_collections"
            android:title="@string/text_collection" />
        <item
            android:id="@+id/nav_welfare"
            android:icon="@drawable/ic_menu_welfare"
            android:title="@string/text_welfare" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/text_settings" />
        <item
            android:id="@+id/action_login_out"
            android:icon="@drawable/ic_exit_app"
            android:title="@string/text_login_out" />
    </item>

</menu>
