<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <LinearLayout
        android:id="@+id/english_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_without_corner"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/english_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorDialogIcon"
            android:clickable="false"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:text="@string/text_english"
            android:textColor="?colorTextActive"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chinese_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_without_corner"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/chinese_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorDialogIcon"
            android:clickable="false"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:text="@string/text_chinese"
            android:textColor="?colorTextActive"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tradition_chinese_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_without_corner"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/tradition_chinese_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?colorDialogIcon"
            android:clickable="false"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:text="@string/text_tradition_chinese"
            android:textColor="?colorTextActive"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>